Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-deployment
  namespace: nodejs-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: chorba/node-js-repo
        ports:
        - containerPort: 4545
      imagePullSecrets:
      - name: docker-credentials
