Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: nodejs-dev
spec:
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 4545
      targetPort: 4545
  type: LoadBalancer
