Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
  namespace: nodejs-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nodejs-app.test
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodejs-app-service
              port: 
                number: 4545
